--- a/htmlcss_td1/index.html
+++ b/htmlcss_td1/index.html
@@ -6,55 +6,49 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Helium Flexbox</title>
+  <link rel="stylesheet" href="style.css">
 
 </head>
 
 <body>
-  <nav>
-    <h2>Helium</h2>
-    <ul>
-      <li>5G</li>
-      <li>Explorer</li>
-      <li>Ecosystem</li>
+  <nav class="navbar">
+    <a href="#" class="navbar-logo">Helium</a>
+    <ul class="navbar-list">
+      <li class="navbar-item">5G</li>
+      <li class="navbar-item">Explorer</li>
+      <li class="navbar-item">Ecosystem</li>
     </ul>
   </nav>
-
-  <section class="header">
-    <div class="header-left">
-      <div class="header-left-container">
-        <h1>People-Powered Networks</h1>
-        <h3>Start a Wireless Revolution</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora aliquid pariatur quae placeat veniam ratione
-          repellendus obcaecati atque quibusdam non!</p>
+  <main class="main">
+    <div class="networks">
+      <div class="info">
+        <h1 class="title">People-Powered networks</h1>
+        <h4 class="subtitle">Start a Wireless Revolution</h4>
+        <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum doloremque vero consequatur illum quae recusandae rem voluptatibus nostrum illo maxime!</p>
       </div>
+      <img class="img" src="img/main.png" alt="main image">
     </div>
-    <div class="header-right">
-      <img src="./img/main.png" id="modem" alt="modem">
-    </div>
-  </section>
-
-  <section class="infos">
-    <div class="infos-left">
-      <h3>Core Technologies</h3>
-      <div class="btn-container">
-        <button>Tokens</button>
-        <button>Proof of Coverage</button>
-        <button>LongFi</button>
+  </main>
+  <footer class="footer">
+    <div class="footer-info">
+      <div class="core">
+        <h3 class="footer-title">Core Technologies</h3>
+        <div class="box-btn">
+          <button class="core-btn">Tokens</button>
+          <button class="core-btn">Proof of Coverage</button>
+          <button class="core-btn">LongFi</button>
+        </div>
       </div>
-    </div>
-    <div class="infos-right">
-      <h3>Our Investors</h3>
-      <div class="investors">
-        <div class="img-container">
-          <img src="./img/investlogo2blue.png" alt="investor-1">
-          <img src="./img/investlogo3blue.png" alt="investor-2">
-          <img src="./img/investlogo4blue.png" alt="investor-3">
+      <div class="investore-box">
+        <h3 class="footer-title">Our Investors</h3>
+        <div class="img-box">
+          <img class="footer-logo" src="img/investlogo2blue.png" alt="">
+          <img class="footer-logo" src="img/investlogo3blue.png" alt="">
+          <img class="footer-logo" src="img/investlogo4blue.png" alt="">
         </div>
       </div>
     </div>
-  </section>
-
-
+  </footer>
 </body>
 
 </html>
