--- a/Gaming_campus_projet/index.html
+++ b/Gaming_campus_projet/index.html
@@ -124,86 +124,82 @@
         </div>
       </div>
     </section>
+    <section class="contact">
+      <div class="contact-container">
+        <div class="contact-list">
+          <div class="list">
+            <div id="contact-img">
+              <img src="./assets/img/logo-gc-footer.jpg" alt="logo-end">
+            </div>
+          </div>
+          <div class="list">
+            <h5>infos pratiques</h5>
+            <ul class="infos-p">
+              <li><a href="#">Gaming Business School</a></li>
+              <li><a href="#">Gaming Academy</a></li>
+              <li><a href="#">Gaming Guru</a></li>
+              <li><a href="#">Recrutement</a></li>
+              <li><a href="#">Investisseurs</a></li>
+              <li><a href="#">Mentions légales</a></li>
+              <li><a href="#">C.G.U</a></li>
+            </ul>
+          </div>
+          <div class="list">
+            <h5>parents</h5>
+            <p>Questions / réponses pour vous accompagner dans votre réflexion sur l'orientation de votre enfant et le
+              choix de Gaming Campus.</p>
+            <a href="#">En savoir plus</a>
+          </div>
+          <div class="list">
+            <h5>nous contacter</h5>
+            <h6>Tél. 04 28 29 81 03</h6>
+            <h6>contact@gamingcampus.fr</h6>
+            <h5 class="network">nous suivre</h5>
+            <div class="footer-logos">
+              <i class="fab fa-twitter"></i>
+              <i class="fab fa-facebook"></i>
+              <i class="fab fa-linkedin"></i>
+              <i class="fab fa-instagram"></i>
+            </div>
+            <p class="copyright">© 2018 Gaming Campus.</p>
+            <p class="droit">Tout droits réservés.</p>
+          </div>
+        </div>
+        <div class="contact-medias">
+          <div class="medias-text">
+            <h3>ils parlent de nous</h3>
+            <p>Voir toutes les retombées presse.</p>
+          </div>
+          <div class="medias-logos">
+            <span class="img">
+              <img src="./assets/img/figaro.png" alt="le figaro">
+            </span>
+            <span class="img">
+              <img src="./assets/img/challenges.png" alt="challenges">
+            </span>
+            <span class="img">
+              <img src="./assets/img/leparisien.png" alt="le parisien">
+            </span>
+            <span class="img">
+              <img src="./assets/img/lemonde.png" alt="le monde">
+            </span>
+            <span class="img">
+              <img src="./assets/img/progres.png" alt="le progrès">
+            </span>
+            <span class="img">
+              <img src="./assets/img/echos.png" alt="les echos">
+            </span>
+            <span class="img">
+              <img src="./assets/img/bfm.png" alt="BFM tv">
+            </span>
+            <span class="img">
+              <img src="./assets/img/lepoint.png" alt="l'équipe">
+            </span>
+            <div class="img">
+            </div>
+          </div>
+    </section>
   </main>
-
-
-
-  <section class="contact">
-    <div class="contact-container">
-      <div class="contact-list">
-        <div class="list">
-          <div id="contact-img">
-            <img src="./assets/img/logo-gc-footer.jpg" alt="logo-end">
-          </div>
-        </div>
-        <div class="list">
-          <h5>infos pratiques</h5>
-          <ul class="infos-p">
-            <li><a href="#">Gaming Business School</a></li>
-            <li><a href="#">Gaming Academy</a></li>
-            <li><a href="#">Gaming Guru</a></li>
-            <li><a href="#">Recrutement</a></li>
-            <li><a href="#">Investisseurs</a></li>
-            <li><a href="#">Mentions légales</a></li>
-            <li><a href="#">C.G.U</a></li>
-          </ul>
-        </div>
-        <div class="list">
-          <h5>parents</h5>
-          <p>Questions / réponses pour vous accompagner dans votre réflexion sur l'orientation de votre enfant et le
-            choix de Gaming Campus.</p>
-          <a href="#">En savoir plus</a>
-        </div>
-        <div class="list">
-          <h5>nous contacter</h5>
-          <h6>Tél. 04 28 29 81 03</h6>
-          <h6>contact@gamingcampus.fr</h6>
-          <h5 class="network">nous suivre</h5>
-          <div class="footer-logos">
-            <i class="fab fa-twitter"></i>
-            <i class="fab fa-facebook"></i>
-            <i class="fab fa-linkedin"></i>
-            <i class="fab fa-instagram"></i>
-          </div>
-          <p class="copyright">© 2018 Gaming Campus.</p>
-          <p>Tout droits réservés.</p>
-        </div>
-      </div>
-      <div class="contact-medias">
-        <div class="medias-text">
-          <h3>ils parlent de nous</h3>
-          <p>Voir toutes les retombées presse.</p>
-        </div>
-        <div class="medias-logos">
-          <span class="img">
-            <img src="./assets/img/figaro.png" alt="le figaro">
-          </span>
-          <span class="img">
-            <img src="./assets/img/challenges.png" alt="challenges">
-          </span>
-          <span class="img">
-            <img src="./assets/img/leparisien.png" alt="le parisien">
-          </span>
-          <span class="img">
-            <img src="./assets/img/lemonde.png" alt="le monde">
-          </span>
-          <span class="img">
-            <img src="./assets/img/progres.png" alt="le progrès">
-          </span>
-          <span class="img">
-            <img src="./assets/img/echos.png" alt="les echos">
-          </span>
-          <span class="img">
-            <img src="./assets/img/bfm.png" alt="BFM tv">
-          </span>
-          <span class="img">
-            <img src="./assets/img/lepoint.png" alt="l'équipe">
-          </span>
-          <div class="img">
-          </div>
-        </div>
-  </section>
-
   <footer>
     <h3>partenaires officiels</h3>
     <ul>
